--- a/src/components/ImageUpload.css
+++ b/src/components/ImageUpload.css
@@ -1,7 +1,8 @@
 .image-upload {
     display: flex;
-    width: 80%;
-    margin: 25px;
+    flex-direction: column;
+    width: 65%;
+    margin: 20px auto;
 }
 
 progress {
@@ -15,6 +16,6 @@ progress {
 }
 
 .fileButton {
-    width: 15%%;
-
+    margin-left: auto;
+    margin-right: auto;
 }
