--- Auto-Git Commit ---

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,12 @@
   padding: 25px;
   border-bottom: 1px solid lightgray;
   display: flex;
+  justify-content: space-between;
 
+}
+
+.appHeaderImage {
+  object-fit: contain;
 }
 
 .appSignUp {
