--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@
 }
 
 .app {
-  background-color: #fafafa;
+  background-color: #30495D;
 }
 
-.appHeader {
+.app-header {
   background-color: #fff;
   object-fit: contain;
   padding: 25px;
@@ -16,11 +16,17 @@
 
 }
 
-.appHeaderImage {
+.app-header-image {
   object-fit: contain;
 }
 
-.appSignUp {
+.app-sign-up {
   display: flex;
   flex-direction: column;
+}
+
+.app-posts {
+  padding: 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
