--- Auto-Git Commit ---

--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -31,6 +31,26 @@
     border: 1px solid lightgray; 
 }
 
+.post-comments {
+    color: #C51162;
+    min-height: 5vh;
+    padding-top: 10px;
+    padding-left: 10px;
+    border: 0.5px solid #fff;
+}
+
 .comment-box {
     display: flex;
+    border-radius: 4px;;
+}
+.post-input {
+    flex: 1;
+    border: none;
+    padding: 10px;
+    border-top: 1px solid lightgray;
+}
+
+.post-button {
+    flex: 0;
+    border-top: 1px solid lightgray;
 }
