--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 
 .main-container {
   display: flex;
-  max-width: 100vw;;
+  width: 80%;
 }
 
 .app-posts {
@@ -44,4 +44,8 @@
 .posts-right {
   margin-top: 8vh;
   margin-left: 5vw;
+}
+
+.login-container Button {
+  margin-right: 10px;
 }
