--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -22,7 +22,7 @@
     width: 100%;
     object-fit: contain;
     border-top: 1px solid #000;
-    background-color: #fff;
+    background-color: rgb(255, 244, 244);
 }
 
 .postText {
@@ -36,7 +36,7 @@
     min-height: 5vh;
     padding-top: 10px;
     padding-left: 10px;
-    border: 1px solid #fff;
+    border: 1px solid lightgray;
 }
 
 .comment-box {
