--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
   border-bottom: 1px solid lightgray;
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
 }
 
